# Fuel-Blending

./: .gitignore  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  run_tests.sh
home/: create_additives_excel.py  create_sample_grades_excel.py  sample_grades_template.xlsx
output/: example_run_wide.json
output/example_run/: results.csv  results.json  tmp66dw7h28  tmpcl9huc6l
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  eval_candidate.html  evaluation_results.html  help.html  index.html  optimization_results.html  optimize.html
uploads/2cdfc3e5-5e2f-4e5d-98dc-7678cf027abe/: additives_example.xlsx  components_example.xlsx  grades_to_evaluate_example.xlsx
uploads/a1796bea-27d3-40ae-8d28-1c9f39badd5a/: grades_example.xlsx
uploads/f608ca27-76d4-4279-928e-b6893ead7acf/: components_example_rawv2.xlsx  grades_example_multi.xlsx
